@@ -1437,6 +1437,9 @@ void QStyle::drawItem( QPainter *p, const QRect &r,
 
     \value PM_MenuBarFrameWidth  frame width of a menubar.
 
+    \value PM_MenuBarItemSpacing  spacing between menubar items.
+    \value PM_ToolBarItemSpacing  spacing between toolbar items.
+
     \value PM_TabBarTabOverlap number of pixels the tabs should overlap.
     \value PM_TabBarTabHSpace extra space added to the tab width.
     \value PM_TabBarTabVSpace extra space added to the tab height.
